Update Valentine's message in index.html

--- a/index.html
+++ b/index.html
@@ -67,10 +67,11 @@
 <body>
 
   <div class="card">
-    <h1>Hey love 💖</h1>
+    <h1>Hi, baby ko, baby kong napakapogiiiiii hihihi</h1>
     <p>
-      Alam kong medyo magulo tayo ngayon…  
-      pero gusto ko pa rin itanong 😌  
+      I know we're not okay today, and we 
+      have a misunderstaning, still 
+      I want to ask you :>>>
       <br><br>
       <strong>Can you be my Valentine’s date?</strong>
     </p>
