Refactor HTML and update button functionality

--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
   <title>For You 💌</title>
 
   <style>
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
 
     body {
       margin: 0;
@@ -33,15 +31,22 @@
 
     h1 {
       color: #ff4d6d;
-      margin-bottom: 10px;
       font-size: 24px;
+      margin-bottom: 10px;
     }
 
     p {
       color: #555;
-      margin-bottom: 25px;
       font-size: 15px;
       line-height: 1.5;
+      margin-bottom: 20px;
+    }
+
+    #response {
+      color: #ff4d6d;
+      font-size: 14px;
+      min-height: 20px;
+      margin-bottom: 10px;
     }
 
     .buttons {
@@ -61,7 +66,6 @@
     #yesBtn {
       background-color: #ff4d6d;
       color: white;
-      margin-right: 10px;
     }
 
     #noBtn {
@@ -76,22 +80,62 @@
 <body>
 
   <div class="card">
-    <h1>hi, baby ko, baby kong napakapogiiiiii hihihi</h1>
+    <h1>hi, baby shanaya ko, baby kong napakapogiiiiii hihi</h1>
     <p>
       I know we're not okay today, and we 
       have a misunderstaning, still 
-      I want to ask you :>>>
+      I want to ask you :>>> 
       <br><br>
       <strong>Can you be my Valentine’s date?</strong>
     </p>
 
+    <div id="response"></div>
+
     <div class="buttons">
       <button id="yesBtn" onclick="yesClick()">Yes 💘</button>
-      <button id="noBtn" onclick="moveNo()">No 🙃</button>
+      <button id="noBtn" onclick="noClick()">No 🙃</button>
     </div>
   </div>
 
   <script>
+    let noCount = 0;
+
+    const messages = [
+      "Are you sure? 🥺",
+      "Talaga ba? 😔",
+      "Sure ka na talaga?",
+      "Last chance na ‘to oh 😭",
+      "Masakit na ha 💔",
+      "Hindi mo ba ako miss? 🥲",
+      "Pleaseee 😞",
+      "Okay lang kahit konti?",
+      "Isa na lang, yes na 😭",
+      "Sige na please 💖"
+    ];
+
+    function noClick() {
+      noCount++;
+
+      const response = document.getElementById("response");
+      const noBtn = document.getElementById("noBtn");
+
+      if (noCount <= 10) {
+        response.innerText = messages[noCount - 1];
+
+        const x = Math.random() * 200 - 100;
+        const y = Math.random() * 60 - 30;
+        noBtn.style.transform = `translate(${x}px, ${y}px)`;
+      }
+
+      if (noCount === 10) {
+        response.innerText = "Okay… kahit anong mangyari, ikaw pa rin ❤️";
+        noBtn.innerText = "Yes na 🥹";
+        noBtn.style.backgroundColor = "#ff4d6d";
+        noBtn.style.color = "white";
+        noBtn.onclick = yesClick;
+      }
+    }
+
     function yesClick() {
       document.body.innerHTML = `
         <div style="
@@ -107,23 +151,11 @@
         ">
           <h1 style="font-size:26px;">
             Yayyyy 💖😭<br><br>
-            Thank you for saying yes.<br>
-            I promise I’ll make it worth it 🫶
+            Thank you for choosing me.<br>
+            I’ll make this Valentine’s special, I promise 🫶
           </h1>
         </div>
       `;
-    }
-
-    function moveNo() {
-      const noBtn = document.getElementById("noBtn");
-
-      const maxX = 200;
-      const maxY = 60;
-
-      const x = Math.random() * maxX - maxX / 2;
-      const y = Math.random() * maxY - maxY / 2;
-
-      noBtn.style.transform = `translate(${x}px, ${y}px)`;
     }
   </script>
 
