Update response messages in index.html

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       }
 
       if (noCount === 10) {
-        response.innerText = "Okay… kahit anong mangyari, ikaw pa rin ❤️";
+        response.innerText = "ihh baby sige na, ayaw mo talaga?? :<<";
         noBtn.innerText = "Yes na 🥹";
         noBtn.style.backgroundColor = "#ff4d6d";
         noBtn.style.color = "white";
@@ -150,8 +150,8 @@
           padding:20px;
         ">
           <h1 style="font-size:26px;">
-            Yayyyy 💖😭<br><br>
-            Thank you for choosing me.<br>
+            Yayyyy cute, Finally pumayag din 💖😭<br><br>
+            Thank you for choosing me, baby.<br>
             I’ll make this Valentine’s special, I promise 🫶
           </h1>
         </div>
